Implement auth and customer endpoints